[workspace]
default-members = [
    "nectere"
]

exclude = [ ]

members = [
    "nectere",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
lazy_static = "1"
paste = "1"
smart_default = "0.7"
thiserror = "2"

[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems <support@scattered-systems.com>"]
categories = [ ]
description = "An efficient space for mananging any and all bindings"
edition = "2021"
homepage = "https://github.com/scattered-systems/nectere/nectere/wiki"
keywords = [ ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scattered-systems/nectere/nectere.git"
version = "0.0.1"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
